--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
 }
 
 .aardbeien, .bananen, .appels, .kiwis {
@@ -11,21 +12,22 @@
     padding: 40px;
     border: 1px solid black;
     border-radius: 10px;
-
+    justify-content: center;
+    align-content: center;
 
     display: flex;
     flex-direction: row;
-    justify-content: center;
 
     font-family: "Arial Black", Serif;
 }
 
 
 .resetButton {
-    height: 20px;
-    width: 20px;
+    height: 40px;
+    width: 330px;
+    margin: 5px;
     border: 1px solid gray;
-    border-radius: 2px;
+    border-radius: 5px;
 
 }
 
